docs: add docs and add audit for security vulnerabilities inside the pipeline

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+      - name: Audit dependencies
+        run: pnpm audit --audit-level=critical
       - name: Check formatting
         run: pnpm format:check
       - name: Check types
