--- a/package.json
+++ b/package.json
@@ -139,5 +139,10 @@
     "prettier": "3.4.2",
     "typescript": "5.7.2",
     "vitest": "3.0.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "form-data@>=4.0.0 <4.0.4": ">=4.0.4"
+    }
   }
 }
