--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "pnpm": {
     "overrides": {
       "@isaacs/brace-expansion@<5.0.1": ">=5.0.1",
-      "glob@<11.1.0": ">=11.1.0"
+      "glob@<11.1.0": ">=11.1.0",
+      "minimatch@~3.1.4": "^3.1.4",
+      "minimatch@~9.0.0": "^9.0.7"
     }
   }
 }
